LessonMenuHandler finally reworked, EtuApiService fixed. Added BotStrings utility class. Most of deprecated classes removed. TODO: check keyboards, add admin panel, review logic of CheckService